--- a/pages/reviews/reviews.wxml
+++ b/pages/reviews/reviews.wxml
@@ -1,3 +1,4 @@
+<view class="container" data-theme="{{theme}}" data-elder="{{elderMode}}" style="background: var(--color-background); min-height: 100vh;">
 <view class="container">
   <!-- 头部统计 -->
   <view class="header">
@@ -130,4 +131,5 @@
     <text class="btn-icon">✏️</text>
     <text class="btn-text">写评价</text>
   </view>
+</view>
 </view>
