--- a/pages/admin/index.wxml
+++ b/pages/admin/index.wxml
@@ -1,3 +1,4 @@
+<view class="container" data-theme="{{theme}}" data-elder="{{elderMode}}" style="background: var(--color-background); min-height: 100vh;">
 <view class="container">
   <!-- 管理员头部 -->
   <view class="admin-header">
@@ -87,4 +88,4 @@
       </view>
     </view>
   </view>
-</view>
+</view></view>
