--- a/pages/admin/users.wxml
+++ b/pages/admin/users.wxml
@@ -1,3 +1,4 @@
+<view class="container" data-theme="{{theme}}" data-elder="{{elderMode}}" style="background: var(--color-background); min-height: 100vh;">
 <view class="container">
   <!-- 搜索栏 -->
   <view class="search-bar">
@@ -63,4 +64,4 @@
       </view>
     </view>
   </view>
-</view>
+</view></view>
