--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,3 +1,4 @@
+<view class="container" data-theme="{{theme}}" data-elder="{{elderMode}}" style="background: var(--color-background); min-height: 100vh;">
 <view class="container">
   <!-- 加载状态 -->
   <view class="loading" wx:if="{{loading}}">
@@ -231,4 +232,4 @@
       </view>
     </view>
   </view>
-</view>
+</view></view>
