--- a/pages/map-picker/map-picker.wxml
+++ b/pages/map-picker/map-picker.wxml
@@ -1,3 +1,4 @@
+<view class="container" data-theme="{{theme}}" data-elder="{{elderMode}}" style="background: var(--color-background); min-height: 100vh;">
 <view class="container">
   <!-- 搜索框 -->
   <view class="search-header">
@@ -66,4 +67,5 @@
     </view>
     <button class="confirm-btn" bindtap="onConfirm">确认选择</button>
   </view>
+</view>
 </view>
