--- a/pages/message/chat.wxml
+++ b/pages/message/chat.wxml
@@ -1,3 +1,4 @@
+<view class="container" data-theme="{{theme}}" data-elder="{{elderMode}}" style="background: var(--color-background); min-height: 100vh;">
 <view class="container">
   <!-- 聊天头部 -->
   <view class="chat-header">
@@ -30,4 +31,5 @@
     ></input>
     <button class="send-btn" bindtap="onSend">发送</button>
   </view>
+</view>
 </view>
