--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -1,3 +1,4 @@
+<view class="container" data-theme="{{theme}}" data-elder="{{elderMode}}" style="background: var(--color-background); min-height: 100vh;">
 <view class="container">
   <!-- 搜索框 -->
   <view class="search-header">
@@ -86,4 +87,5 @@
       </view>
     </view>
   </view>
+</view>
 </view>
