--- a/pages/message/index/index.wxml
+++ b/pages/message/index/index.wxml
@@ -1,4 +1,10 @@
-<view class="section">
+<view class="container {{theme === 'dark' ? 'dark' : ''}} {{elderMode ? 'elder-mode' : ''}}" data-theme="{{theme}}" data-elder="{{elderMode ? 'true' : 'false'}}">
+  <!-- 背景装饰 -->
+  <view class="bg-decorations">
+    <image class="bg-mountain" src="/images/backgrounds/山脉.jpg" mode="aspectFill"></image>
+  </view>
+  
+  <view class="section">
   <block wx:for="{{sessionList}}" wx:key="id">
     <view class="card session-card" bindtap="gotoChat" data-id="{{item.id}}">
       <view class="row-between">
